--- a/package.json
+++ b/package.json
@@ -137,16 +137,19 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
+    "@types/convert-excel-to-json": "^1.7.1",
     "@types/enzyme": "^3.10.9",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.9",
     "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "16.10.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.0",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.25",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-env": "^1.16.2",
     "browserslist-config-erb": "^0.0.3",
